--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tabler/icons-react": "^3.35.0",
     "axios": "^1.13.2",
     "canvas-confetti": "^1.9.4",
+    "dotenv": "^17.2.3",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.9.6",
