--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@mantine/core": "^8.3.9",
     "@mantine/form": "^8.3.9",
     "@mantine/hooks": "^8.3.9",
+    "@mantine/notifications": "^8.3.9",
     "@tabler/icons-react": "^3.35.0",
     "axios": "^1.13.2",
     "canvas-confetti": "^1.9.4",
