--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-VITE_APP_BASE_URL=https://backend-test-production-e988.up.railway.app/api
+# VITE_APP_BASE_URL=https://backend-test-production-e988.up.railway.app/api
+VITE_APP_BASE_URL=http://localhost:3000/api
